@@ -19,16 +19,16 @@ package org.apache.commons.jxpath;
 import java.util.Iterator;
 import java.util.List;
 
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.w3c.dom.Element;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 /**
  * Test BasicNodeSet
- *
- * @author
- * @version $Revision$ $Date: 2007-12-10 15:15:27 -0600 (Mon, 10 Dec
- *          2007) $
  */
-public class BasicNodeSetTest extends JXPathTestCase {
+public class BasicNodeSetTest extends AbstractJXPathTest {
 
     /** JXPathContext */
     protected JXPathContext context;
@@ -36,6 +36,8 @@ public class BasicNodeSetTest extends JXPathTestCase {
     /** BasicNodeSet */
     protected BasicNodeSet nodeSet;
 
+    @Override
+    @BeforeEach
     protected void setUp() throws Exception {
         super.setUp();
         context = JXPathContext.newContext(new TestMixedModelBean());
@@ -43,25 +45,25 @@ public class BasicNodeSetTest extends JXPathTestCase {
     }
 
     /**
-     * Add the pointers for the specified path to <code>nodeSet</code>.
-     * 
+     * Add the pointers for the specified path to {@code nodeSet}.
+     *
      * @param xpath
      */
-    protected void addPointers(String xpath) {
-        for (Iterator iter = context.iteratePointers(xpath); iter.hasNext();) {
-            nodeSet.add((Pointer) iter.next());
+    protected void addPointers(final String xpath) {
+        for (final Iterator<Pointer> iter = context.iteratePointers(xpath); iter.hasNext();) {
+            nodeSet.add(iter.next());
         }
         nudge();
     }
 
     /**
-     * Remove the pointers for the specified path from <code>nodeSet</code>.
-     * 
+     * Remove the pointers for the specified path from {@code nodeSet}.
+     *
      * @param xpath
      */
-    protected void removePointers(String xpath) {
-        for (Iterator iter = context.iteratePointers(xpath); iter.hasNext();) {
-            nodeSet.remove((Pointer) iter.next());
+    protected void removePointers(final String xpath) {
+        for (final Iterator<Pointer> iter = context.iteratePointers(xpath); iter.hasNext();) {
+            nodeSet.remove(iter.next());
         }
         nudge();
     }
@@ -78,33 +80,37 @@ public class BasicNodeSetTest extends JXPathTestCase {
     /**
      * Test adding pointers.
      */
+    @Test
     public void testAdd() {
         addPointers("/bean/integers");
-        assertEquals(nodeSet.getPointers().toString(), list("/bean/integers[1]",
-                "/bean/integers[2]", "/bean/integers[3]", "/bean/integers[4]").toString());
-        assertEquals(list(new Integer(1), new Integer(2), new Integer(3),
-                new Integer(4)), nodeSet.getValues());
-        assertEquals(list(new Integer(1), new Integer(2), new Integer(3),
-                new Integer(4)), nodeSet.getNodes());
+        assertEquals(list("/bean/integers[1]",
+                "/bean/integers[2]", "/bean/integers[3]", "/bean/integers[4]").toString(),
+                nodeSet.getPointers().toString());
+        assertEquals(list(Integer.valueOf(1), Integer.valueOf(2), Integer.valueOf(3),
+                Integer.valueOf(4)), nodeSet.getValues());
+        assertEquals(list(Integer.valueOf(1), Integer.valueOf(2), Integer.valueOf(3),
+                Integer.valueOf(4)), nodeSet.getNodes());
     }
 
     /**
      * Test removing a pointer.
      */
+    @Test
     public void testRemove() {
         addPointers("/bean/integers");
         removePointers("/bean/integers[4]");
         assertEquals(list("/bean/integers[1]", "/bean/integers[2]", "/bean/integers[3]")
                 .toString(), nodeSet.getPointers().toString());
-        assertEquals(list(new Integer(1), new Integer(2), new Integer(3)),
+        assertEquals(list(Integer.valueOf(1), Integer.valueOf(2), Integer.valueOf(3)),
                 nodeSet.getValues());
-        assertEquals(list(new Integer(1), new Integer(2), new Integer(3)),
+        assertEquals(list(Integer.valueOf(1), Integer.valueOf(2), Integer.valueOf(3)),
                 nodeSet.getNodes());
     }
 
     /**
      * Demonstrate when nodes != values:  in XML models.
      */
+    @Test
     public void testNodes() {
         addPointers("/document/vendor/contact");
         assertEquals(list("/document/vendor[1]/contact[1]",
@@ -123,10 +129,10 @@ public class BasicNodeSetTest extends JXPathTestCase {
      * @param names List of expected names
      * @param elements List of DOM elements
      */
-    protected void assertElementNames(List names, List elements) {
+    protected void assertElementNames(final List names, final List elements) {
         assertEquals(names.size(), elements.size());
-        Iterator nameIter = names.iterator();
-        Iterator elementIter = elements.iterator();
+        final Iterator nameIter = names.iterator();
+        final Iterator elementIter = elements.iterator();
         while (elementIter.hasNext()) {
             assertEquals(nameIter.next(), ((Element) elementIter.next()).getTagName());
         }
@@ -137,13 +143,13 @@ public class BasicNodeSetTest extends JXPathTestCase {
      * @param values List of expected values
      * @param elements List of DOM elements
      */
-    protected void assertElementValues(List values, List elements) {
+    protected void assertElementValues(final List values, final List elements) {
         assertEquals(values.size(), elements.size());
-        Iterator valueIter = values.iterator();
-        Iterator elementIter = elements.iterator();
+        final Iterator valueIter = values.iterator();
+        final Iterator elementIter = elements.iterator();
         while (elementIter.hasNext()) {
             assertEquals(valueIter.next(), ((Element) elementIter.next()).getFirstChild().getNodeValue());
         }
-        
+
     }
 }
