@@ -27,7 +27,7 @@ import org.apache.commons.jxpath.Function;
 import org.apache.commons.jxpath.FunctionLibrary;
 import org.apache.commons.jxpath.Functions;
 import org.apache.commons.jxpath.JXPathContext;
-import org.apache.commons.jxpath.JXPathTestCase;
+import org.apache.commons.jxpath.AbstractJXPathTest;
 import org.apache.commons.jxpath.NodeSet;
 import org.apache.commons.jxpath.PackageFunctions;
 import org.apache.commons.jxpath.Pointer;
@@ -37,24 +37,32 @@ import org.apache.commons.jxpath.ri.model.NodePointer;
 import org.apache.commons.jxpath.util.JXPath11CompatibleTypeConverter;
 import org.apache.commons.jxpath.util.TypeConverter;
 import org.apache.commons.jxpath.util.TypeUtils;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 
 /**
  * Test extension functions.
  */
-public class ExtensionFunctionTest extends JXPathTestCase {
+public class ExtensionFunctionTest extends AbstractJXPathTest {
     private Functions functions;
     private JXPathContext context;
     private TestBean testBean;
     private TypeConverter typeConverter;
 
+    @Override
+    @BeforeEach
     public void setUp() {
         if (context == null) {
             testBean = new TestBean();
             context = JXPathContext.newContext(testBean);
-            Variables vars = context.getVariables();
+            final Variables vars = context.getVariables();
             vars.declareVariable("test", new TestFunctions(4, "test"));
 
-            FunctionLibrary lib = new FunctionLibrary();
+            final FunctionLibrary lib = new FunctionLibrary();
             lib.addFunctions(new ClassFunctions(TestFunctions.class, "test"));
             lib.addFunctions(new ClassFunctions(TestFunctions2.class, "test"));
             lib.addFunctions(new PackageFunctions("", "call"));
@@ -71,85 +79,95 @@ public class ExtensionFunctionTest extends JXPathTestCase {
         typeConverter = TypeUtils.getTypeConverter();
     }
 
+    @AfterEach
     public void tearDown() {
         TypeUtils.setTypeConverter(typeConverter);
     }
 
+    @Test
     public void testConstructorLookup() {
-        Object[] args = new Object[] { new Integer(1), "x" };
-        Function func = functions.getFunction("test", "new", args);
+        final Object[] args = { Integer.valueOf(1), "x" };
+        final Function func = functions.getFunction("test", "new", args);
 
         assertEquals(
-            "test:new(1, x)",
+            "foo=1; bar=x",
             func.invoke(new Context(null), args).toString(),
-            "foo=1; bar=x");
+            "test:new(1, x)");
     }
 
+    @Test
     public void testConstructorLookupWithExpressionContext() {
-        Object[] args = new Object[] { "baz" };
-        Function func = functions.getFunction("test", "new", args);
+        final Object[] args = { "baz" };
+        final Function func = functions.getFunction("test", "new", args);
         assertEquals(
-            "test:new('baz')",
-            func.invoke(new Context(new Integer(1)), args).toString(),
-            "foo=1; bar=baz");
+            "foo=1; bar=baz",
+            func.invoke(new Context(Integer.valueOf(1)), args).toString(),
+            "test:new('baz')");
     }
 
+    @Test
     public void testStaticMethodLookup() {
-        Object[] args = new Object[] { new Integer(1), "x" };
-        Function func = functions.getFunction("test", "build", args);
+        final Object[] args = { Integer.valueOf(1), "x" };
+        final Function func = functions.getFunction("test", "build", args);
         assertEquals(
-            "test:build(1, x)",
+            "foo=1; bar=x",
             func.invoke(new Context(null), args).toString(),
-            "foo=1; bar=x");
+            "test:build(1, x)");
     }
 
+    @Test
     public void testStaticMethodLookupWithConversion() {
-        Object[] args = new Object[] { "7", new Integer(1)};
-        Function func = functions.getFunction("test", "build", args);
+        final Object[] args = { "7", Integer.valueOf(1)};
+        final Function func = functions.getFunction("test", "build", args);
         assertEquals(
-            "test:build('7', 1)",
+            "foo=7; bar=1",
             func.invoke(new Context(null), args).toString(),
-            "foo=7; bar=1");
+            "test:build('7', 1)");
     }
 
+    @Test
     public void testMethodLookup() {
-        Object[] args = new Object[] { new TestFunctions()};
-        Function func = functions.getFunction("test", "getFoo", args);
+        final Object[] args = { new TestFunctions()};
+        final Function func = functions.getFunction("test", "getFoo", args);
         assertEquals(
-            "test:getFoo($test, 1, x)",
+            "0",
             func.invoke(new Context(null), args).toString(),
-            "0");
+            "test:getFoo($test, 1, x)");
     }
 
+    @Test
     public void testStaticMethodLookupWithExpressionContext() {
-        Object[] args = new Object[0];
-        Function func = functions.getFunction("test", "path", args);
+        final Object[] args = {};
+        final Function func = functions.getFunction("test", "path", args);
         assertEquals(
-            "test:path()",
-            func.invoke(new Context(new Integer(1)), args),
-            "1");
+            "1",
+            func.invoke(new Context(Integer.valueOf(1)), args),
+            "test:path()");
     }
 
+    @Test
     public void testMethodLookupWithExpressionContext() {
-        Object[] args = new Object[] { new TestFunctions()};
-        Function func = functions.getFunction("test", "instancePath", args);
+        final Object[] args = { new TestFunctions()};
+        final Function func = functions.getFunction("test", "instancePath", args);
         assertEquals(
-            "test:instancePath()",
-            func.invoke(new Context(new Integer(1)), args),
-            "1");
+            "1",
+            func.invoke(new Context(Integer.valueOf(1)), args),
+            "test:instancePath()");
     }
 
+    @Test
     public void testMethodLookupWithExpressionContextAndArgument() {
-        Object[] args = new Object[] { new TestFunctions(), "*" };
-        Function func = functions.getFunction("test", "pathWithSuffix", args);
+        final Object[] args = { new TestFunctions(), "*" };
+        final Function func = functions.getFunction("test", "pathWithSuffix", args);
         assertEquals(
-            "test:pathWithSuffix('*')",
-            func.invoke(new Context(new Integer(1)), args),
-            "1*");
+            "1*",
+            func.invoke(new Context(Integer.valueOf(1)), args),
+            "test:pathWithSuffix('*')");
     }
 
+    @Test
     public void testAllocation() {
-        
+
         // Allocate new object using the default constructor
         assertXPathValue(context, "string(test:new())", "foo=0; bar=null");
 
@@ -173,23 +191,24 @@ public class ExtensionFunctionTest extends JXPathTestCase {
 
         // Allocate new object using a custom constructor - type conversion
         assertXPathValue(context, "string(test:new('3', 4))", "foo=3; bar=4.0");
-        
-        context.getVariables().declareVariable("A", "baz");        
+
+        context.getVariables().declareVariable("A", "baz");
         assertXPathValue(
                 context,
                 "string(test:new(2, $A, false))",
                 "foo=2; bar=baz");
     }
 
+    @Test
     public void testMethodCall() {
-        assertXPathValue(context, "length('foo')", new Integer(3));
+        assertXPathValue(context, "length('foo')", Integer.valueOf(3));
 
         // We are just calling a method - prefix is ignored
         assertXPathValue(context, "call:substring('foo', 1, 2)", "o");
 
         // Invoke a function implemented as a regular method
         assertXPathValue(context, "string(test:getFoo($test))", "4");
-        
+
         // Note that the prefix is ignored anyway, we are just calling a method
         assertXPathValue(context, "string(call:getFoo($test))", "4");
 
@@ -202,31 +221,33 @@ public class ExtensionFunctionTest extends JXPathTestCase {
             "string(test:setFooAndBar($test, 7, 'biz'))",
             "foo=7; bar=biz");
     }
-    
+
+    @Test
     public void testCollectionMethodCall() {
-        
-        List list = new ArrayList();
+
+        final List list = new ArrayList();
         list.add("foo");
         context.getVariables().declareVariable("myList", list);
 
         assertXPathValue(
-            context, 
-            "size($myList)", 
-            new Integer(1));
-    
+            context,
+            "size($myList)",
+            Integer.valueOf(1));
+
         assertXPathValue(
-            context, 
-            "size(beans)", 
-            new Integer(2));
-            
+            context,
+            "size(beans)",
+            Integer.valueOf(2));
+
         context.getValue("add($myList, 'hello')");
-        assertEquals("After adding an element", 2, list.size());
-        
-        JXPathContext context = JXPathContext.newContext(new ArrayList());
-        assertEquals("Extension function on root collection", "0", String
-                .valueOf(context.getValue("size(/)")));
+        assertEquals(2, list.size(),"After adding an element");
+
+        final JXPathContext context = JXPathContext.newContext(new ArrayList());
+        assertEquals("0", String.valueOf(context.getValue("size(/)")),
+            "Extension function on root collection");
     }
 
+    @Test
     public void testStaticMethodCall() {
 
         assertXPathValue(
@@ -249,18 +270,19 @@ public class ExtensionFunctionTest extends JXPathTestCase {
         // Two ClassFunctions are sharing the same prefix.
         // This is TestFunctions2
         assertXPathValue(context, "string(test:increment(8))", "9");
-        
+
         // See that a NodeSet gets properly converted to a string
         assertXPathValue(context, "test:string(/beans/name)", "Name 1");
     }
 
+    @Test
     public void testExpressionContext() {
         // Execute an extension function for each node while searching
         // The function uses ExpressionContext to get to the current
         // node.
         assertXPathValue(
-            context, 
-            "//.[test:isMap()]/Key1", 
+            context,
+            "//.[test:isMap()]/Key1",
             "Value 1");
 
         // The function gets all
@@ -268,23 +290,22 @@ public class ExtensionFunctionTest extends JXPathTestCase {
         assertXPathValue(
             context,
             "count(//.[test:count(strings) = 3])",
-            new Double(7));
+            Double.valueOf(7));
 
         // The function receives a collection of strings
-        // and checks their type for testing purposes            
+        // and checks their type for testing purposes
         assertXPathValue(
             context,
             "test:count(//strings)",
-            new Integer(21));
+            Integer.valueOf(21));
 
-        
         // The function receives a collection of pointers
-        // and checks their type for testing purposes            
+        // and checks their type for testing purposes
         assertXPathValue(
             context,
             "test:countPointers(//strings)",
-            new Integer(21));
-            
+            Integer.valueOf(21));
+
         // The function uses ExpressionContext to get to the current
         // pointer and returns its path.
         assertXPathValue(
@@ -292,7 +313,8 @@ public class ExtensionFunctionTest extends JXPathTestCase {
             "/beans[contains(test:path(), '[2]')]/name",
             "Name 2");
     }
-    
+
+    @Test
     public void testCollectionReturn() {
         assertXPathValueIterator(
             context,
@@ -303,29 +325,30 @@ public class ExtensionFunctionTest extends JXPathTestCase {
             context,
             "test:collection()/name",
             list("/.[1]/name", "/.[2]/name"));
-            
+
         assertXPathValue(
             context,
             "test:collection()/name",
-            "foo");        
+            "foo");
 
         assertXPathValue(
             context,
             "test:collection()/@name",
-            "foo");   
-        
-        List list = new ArrayList();
+            "foo");
+
+        final List list = new ArrayList();
         list.add("foo");
         list.add("bar");
         context.getVariables().declareVariable("list", list);
-        Object values = context.getValue("test:items($list)");
-        assertTrue("Return type: ", values instanceof Collection);
+        final Object values = context.getValue("test:items($list)");
+        assertInstanceOf(Collection.class, values, "Return type: ");
         assertEquals(
-            "Return values: ",
             list,
-            new ArrayList((Collection) values));
+            new ArrayList((Collection) values),
+            "Return values: ");
     }
 
+    @Test
     public void testNodeSetReturn() {
         assertXPathValueIterator(
             context,
@@ -341,12 +364,12 @@ public class ExtensionFunctionTest extends JXPathTestCase {
             context,
             "test:nodeSet()/name",
             list("/beans[1]/name", "/beans[2]/name"));
-            
+
         assertXPathValueAndPointer(
             context,
             "test:nodeSet()/name",
             "Name 1",
-            "/beans[1]/name");        
+            "/beans[1]/name");
 
         assertXPathValueAndPointer(
             context,
@@ -359,6 +382,7 @@ public class ExtensionFunctionTest extends JXPathTestCase {
         assertXPathValue(context, "test:nodeSet()", testBean.getBeans()[0]);
     }
 
+    @Test
     public void testEstablishNodeSetBaseline() {
         assertXPathValue(
             context,
@@ -370,6 +394,7 @@ public class ExtensionFunctionTest extends JXPathTestCase {
             Boolean.FALSE);
     }
 
+    @Test
     public void testBCNodeSetHack() {
         TypeUtils.setTypeConverter(new JXPath11CompatibleTypeConverter());
         assertXPathValue(
@@ -382,26 +407,30 @@ public class ExtensionFunctionTest extends JXPathTestCase {
             Boolean.TRUE);
     }
 
-    private static class Context implements ExpressionContext {
-        private Object object;
+    private static final class Context implements ExpressionContext {
+        private final Object object;
 
-        public Context(Object object) {
+        public Context(final Object object) {
             this.object = object;
         }
 
+        @Override
         public Pointer getContextNodePointer() {
             return NodePointer
                     .newNodePointer(null, object, Locale.getDefault());
         }
 
+        @Override
         public List getContextNodeList() {
             return null;
         }
 
+        @Override
         public JXPathContext getJXPathContext() {
             return null;
         }
 
+        @Override
         public int getPosition() {
             return 0;
         }
