@@ -25,7 +25,7 @@ import java.util.Locale;
 import org.apache.commons.jxpath.AbstractFactory;
 import org.apache.commons.jxpath.ClassFunctions;
 import org.apache.commons.jxpath.JXPathContext;
-import org.apache.commons.jxpath.JXPathTestCase;
+import org.apache.commons.jxpath.AbstractJXPathTest;
 import org.apache.commons.jxpath.NestedTestBean;
 import org.apache.commons.jxpath.Pointer;
 import org.apache.commons.jxpath.ri.QName;
@@ -34,13 +34,21 @@ import org.apache.commons.jxpath.ri.compiler.TestFunctions;
 import org.apache.commons.jxpath.ri.model.beans.PropertyOwnerPointer;
 import org.apache.commons.jxpath.ri.model.beans.PropertyPointer;
 import org.apache.commons.jxpath.ri.model.dynabeans.DynaBeanModelTest;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 /**
  * Abstract superclass for Bean access with JXPath.
  */
-public abstract class BeanModelTestCase extends JXPathTestCase {
+public abstract class AbstractBeanModelTest extends AbstractJXPathTest {
     private JXPathContext context;
 
+    @Override
+    @BeforeEach
     public void setUp() {
 //        if (context == null) {
             context = JXPathContext.newContext(createContextBean());
@@ -55,6 +63,8 @@ public abstract class BeanModelTestCase extends JXPathTestCase {
     /**
      * Test property iterators, the core of the graph traversal engine
      */
+
+    @Test
     public void testIndividualIterators() {
         testIndividual(+1, 0, true, false, 0);
         testIndividual(-1, 0, true, false, 4);
@@ -71,13 +81,13 @@ public abstract class BeanModelTestCase extends JXPathTestCase {
     }
 
     private void testIndividual(
-        int relativePropertyIndex,
-        int offset,
-        boolean useStartLocation,
-        boolean reverse,
-        int expected) 
+        final int relativePropertyIndex,
+        final int offset,
+        final boolean useStartLocation,
+        final boolean reverse,
+        final int expected)
     {
-        PropertyOwnerPointer root =
+        final PropertyOwnerPointer root =
             (PropertyOwnerPointer) NodePointer.newNodePointer(
                 new QName(null, "root"),
                 createContextBean(),
@@ -104,21 +114,22 @@ public abstract class BeanModelTestCase extends JXPathTestCase {
             size++;
         }
         assertEquals(
+            expected,
+            size,
             "ITERATIONS: Individual, relativePropertyIndex="
                 + relativePropertyIndex
                 + ", offset="
                 + offset
-                + ", useStartLocation="
+                    + ", useStartLocation="
                 + useStartLocation
                 + ", reverse="
-                + reverse,
-            expected,
-            size);
+                + reverse);
     }
 
     /**
      * Test property iterators with multiple properties returned
      */
+    @Test
     public void testMultipleIterators() {
         testMultiple(0, 0, true, false, 20);
 
@@ -133,13 +144,13 @@ public abstract class BeanModelTestCase extends JXPathTestCase {
     }
 
     private void testMultiple(
-        int propertyIndex,
-        int offset,
-        boolean useStartLocation,
-        boolean reverse,
-        int expected) 
+        final int propertyIndex,
+        final int offset,
+        final boolean useStartLocation,
+        final boolean reverse,
+        final int expected)
     {
-        PropertyOwnerPointer root =
+        final PropertyOwnerPointer root =
             (PropertyOwnerPointer) NodePointer.newNodePointer(
                 new QName(null, "root"),
                 createContextBean(),
@@ -161,6 +172,8 @@ public abstract class BeanModelTestCase extends JXPathTestCase {
             size++;
         }
         assertEquals(
+            expected,
+            size,
             "ITERATIONS: Multiple, propertyIndex="
                 + propertyIndex
                 + ", offset="
@@ -168,13 +181,11 @@ public abstract class BeanModelTestCase extends JXPathTestCase {
                 + ", useStartLocation="
                 + useStartLocation
                 + ", reverse="
-                + reverse,
-            expected,
-            size);
+                + reverse);
     }
 
-    private int relativeProperty(PropertyPointer holder, int offset) {
-        String[] names = holder.getPropertyNames();
+    private int relativeProperty(final PropertyPointer holder, final int offset) {
+        final String[] names = holder.getPropertyNames();
         for (int i = 0; i < names.length; i++) {
             if (names[i].equals("integers")) {
                 return i + offset;
@@ -183,66 +194,70 @@ public abstract class BeanModelTestCase extends JXPathTestCase {
         return -1;
     }
 
+    @Test
     public void testIteratePropertyArrayWithHasNext() {
-        JXPathContext context = JXPathContext.newContext(createContextBean());
-        Iterator it = context.iteratePointers("/integers");
-        List actual = new ArrayList();
+        final JXPathContext context = JXPathContext.newContext(createContextBean());
+        final Iterator<Pointer> it = context.iteratePointers("/integers");
+        final List<String> actual = new ArrayList<>();
         while (it.hasNext()) {
-            actual.add(((Pointer) it.next()).asPath());
+            actual.add(it.next().asPath());
         }
         assertEquals(
-            "Iterating 'hasNext'/'next'<" + "/integers" + ">",
             list(
                 "/integers[1]",
                 "/integers[2]",
                 "/integers[3]",
                 "/integers[4]"),
-            actual);
+            actual,
+            "Iterating 'hasNext'/'next'<" + "/integers" + ">");
     }
 
+    @Test
     public void testIteratePropertyArrayWithoutHasNext() {
-        JXPathContext context = JXPathContext.newContext(createContextBean());
-        Iterator it = context.iteratePointers("/integers");
-        List actual = new ArrayList();
+        final JXPathContext context = JXPathContext.newContext(createContextBean());
+        final Iterator<Pointer> it = context.iteratePointers("/integers");
+        final List<String> actual = new ArrayList<>();
         for (int i = 0; i < 4; i++) {
             actual.add(it.next().toString());
         }
         assertEquals(
-            "Iterating 'next'<" + "/integers" + ">",
             list(
                 "/integers[1]",
                 "/integers[2]",
                 "/integers[3]",
                 "/integers[4]"),
-            actual);
+            actual,
+            "Iterating 'next'<" + "/integers" + ">");
     }
 
+    @Test
     public void testIterateAndSet() {
-        JXPathContext context = JXPathContext.newContext(createContextBean());
+        final JXPathContext context = JXPathContext.newContext(createContextBean());
 
-        Iterator it = context.iteratePointers("beans/int");
+        Iterator<Pointer> it = context.iteratePointers("beans/int");
         int i = 5;
         while (it.hasNext()) {
-            NodePointer pointer = (NodePointer) it.next();
-            pointer.setValue(new Integer(i++));
+            final NodePointer pointer = (NodePointer) it.next();
+            pointer.setValue(Integer.valueOf(i++));
         }
 
         it = context.iteratePointers("beans/int");
-        List actual = new ArrayList();
+        final List<Object> actual = new ArrayList<>();
         while (it.hasNext()) {
-            actual.add(((Pointer) it.next()).getValue());
+            actual.add(it.next().getValue());
         }
         assertEquals(
-            "Iterating <" + "beans/int" + ">",
-            list(new Integer(5), new Integer(6)),
-            actual);
+            list(Integer.valueOf(5), Integer.valueOf(6)),
+            actual,
+            "Iterating <" + "beans/int" + ">");
     }
 
     /**
      * Test contributed by Kate Dvortsova
      */
+    @Test
     public void testIteratePointerSetValue() {
-        JXPathContext context = JXPathContext.newContext(createContextBean());
+        final JXPathContext context = JXPathContext.newContext(createContextBean());
 
         assertXPathValue(context, "/beans[1]/name", "Name 1");
         assertXPathValue(context, "/beans[2]/name", "Name 2");
@@ -256,30 +271,32 @@ public abstract class BeanModelTestCase extends JXPathTestCase {
         assertXPathValue(context, "/beans[2]/name", "Name 2");
 
         int iterCount = 0;
-        Iterator iter = context.iteratePointers("/beans/name");
+        final Iterator<Pointer> iter = context.iteratePointers("/beans/name");
         while (iter.hasNext()) {
             iterCount++;
-            Pointer pointer = (Pointer) iter.next();
+            final Pointer pointer = iter.next();
             String s = (String) pointer.getValue();
-            s = s + "suffix";
+            s += "suffix";
             pointer.setValue(s);
-            assertEquals("pointer.getValue", s, pointer.getValue());
+            assertEquals(s, pointer.getValue(),"pointer.getValue");
             // fails right here, the value isn't getting set in the bean.
             assertEquals(
-                "context.getValue",
                 s,
-                context.getValue(pointer.asPath()));
+                context.getValue(pointer.asPath()),
+                "context.getValue");
         }
-        assertEquals("Iteration count", 2, iterCount);
+        assertEquals(2, iterCount, "Iteration count");
 
         assertXPathValue(context, "/beans[1]/name", "Name 1suffix");
         assertXPathValue(context, "/beans[2]/name", "Name 2suffix");
     }
 
+    @Test
     public void testRoot() {
         assertXPathValueAndPointer(context, "/", context.getContextBean(), "/");
     }
 
+    @Test
     public void testAxisAncestor() {
         // ancestor::
         assertXPathValue(context, "int/ancestor::root = /", Boolean.TRUE);
@@ -287,7 +304,7 @@ public abstract class BeanModelTestCase extends JXPathTestCase {
         assertXPathValue(
             context,
             "count(beans/name/ancestor-or-self::node())",
-            new Double(5));
+            Double.valueOf(5));
 
         assertXPathValue(
             context,
@@ -295,6 +312,7 @@ public abstract class BeanModelTestCase extends JXPathTestCase {
             Boolean.TRUE);
     }
 
+    @Test
     public void testAxisChild() {
         assertXPathValue(context, "boolean", Boolean.FALSE);
 
@@ -303,7 +321,7 @@ public abstract class BeanModelTestCase extends JXPathTestCase {
         assertXPathPointerIterator(context, "boolean", list("/boolean"));
 
         // Count elements in a child collection
-        assertXPathValue(context, "count(set)", new Double(3));
+        assertXPathValue(context, "count(set)", Double.valueOf(3));
 
 //        assertXPathValue(context,"boolean/class/name", "java.lang.Boolean");
 
@@ -311,12 +329,13 @@ public abstract class BeanModelTestCase extends JXPathTestCase {
         assertXPathValueIterator(context, "foo:boolean", list());
 
         // Count all children with a wildcard
-        assertXPathValue(context, "count(*)", new Double(21));
+        assertXPathValue(context, "count(*)", Double.valueOf(21));
 
         // Same, constrained by node type = node()
-        assertXPathValue(context, "count(child::node())", new Double(21));
+        assertXPathValue(context, "count(child::node())", Double.valueOf(21));
     }
 
+    @Test
     public void testAxisChildNestedBean() {
         // Nested bean
         assertXPathValue(context, "nestedBean/name", "Name 0");
@@ -329,15 +348,16 @@ public abstract class BeanModelTestCase extends JXPathTestCase {
             list("/nestedBean/name"));
     }
 
+    @Test
     public void testAxisChildNestedCollection() {
         assertXPathValueIterator(
             context,
             "integers",
             list(
-                new Integer(1),
-                new Integer(2),
-                new Integer(3),
-                new Integer(4)));
+                Integer.valueOf(1),
+                Integer.valueOf(2),
+                Integer.valueOf(3),
+                Integer.valueOf(4)));
 
         assertXPathPointer(context, "integers", "/integers");
 
@@ -351,8 +371,9 @@ public abstract class BeanModelTestCase extends JXPathTestCase {
                 "/integers[4]"));
     }
 
+    @Test
     public void testIndexPredicate() {
-        assertXPathValue(context, "integers[2]", new Integer(2));
+        assertXPathValue(context, "integers[2]", Integer.valueOf(2));
 
         assertXPathPointer(context, "integers[2]", "/integers[2]");
 
@@ -382,16 +403,18 @@ public abstract class BeanModelTestCase extends JXPathTestCase {
         assertXPathValue(context, "(beans/strings[2])[1]", "String 2");
     }
 
+    @Test
     public void testAxisDescendant() {
         // descendant::
-        assertXPathValue(context, "count(descendant::node())", new Double(65));
+        assertXPathValue(context, "count(descendant::node())", Double.valueOf(65));
 
         // Should not find any descendants with name root
-        assertXPathValue(context, "count(descendant::root)", new Double(0));
+        assertXPathValue(context, "count(descendant::root)", Double.valueOf(0));
 
-        assertXPathValue(context, "count(descendant::name)", new Double(7));
+        assertXPathValue(context, "count(descendant::name)", Double.valueOf(7));
     }
 
+    @Test
     public void testAxisDescendantOrSelf() {
         // descendant-or-self::
         assertXPathValueIterator(
@@ -423,77 +446,80 @@ public abstract class BeanModelTestCase extends JXPathTestCase {
         assertXPathValue(
             context,
             "count(descendant-or-self::root)",
-            new Double(1));
+            Double.valueOf(1));
 
         // Combine descendant-or-self:: and and self::
-        assertXPathValue(context, "count(nestedBean//.)", new Double(7));
+        assertXPathValue(context, "count(nestedBean//.)", Double.valueOf(7));
 
         // Combine descendant-or-self:: and and self::name
-        assertXPathValue(context, "count(//self::beans)", new Double(2));
+        assertXPathValue(context, "count(//self::beans)", Double.valueOf(2));
 
         // Count all nodes in the tree
         assertXPathValue(
             context,
             "count(descendant-or-self::node())",
-            new Double(66));
+            Double.valueOf(66));
 
     }
 
+    @Test
     public void testAxisFollowing() {
         // following::
         assertXPathValue(
             context,
             "count(nestedBean/strings[2]/following::node())",
-            new Double(21));
+            Double.valueOf(21));
 
         assertXPathValue(
             context,
             "count(nestedBean/strings[2]/following::strings)",
-            new Double(7));
+            Double.valueOf(7));
     }
 
+    @Test
     public void testAxisFollowingSibling() {
         // following-sibling::
         assertXPathValue(
             context,
             "count(/nestedBean/following-sibling::node())",
-            new Double(8));
+            Double.valueOf(8));
 
         assertXPathValue(
             context,
             "count(/nestedBean/following-sibling::object)",
-            new Double(1));
+            Double.valueOf(1));
 
         // Combine parent:: and following-sibling::
         assertXPathValue(
             context,
             "count(/nestedBean/boolean/../following-sibling::node())",
-            new Double(8));
+            Double.valueOf(8));
 
         assertXPathValue(
             context,
             "count(/nestedBean/boolean/../following-sibling::object)",
-            new Double(1));
+            Double.valueOf(1));
 
         // Combine descendant:: and following-sibling::
         assertXPathValue(
             context,
             "count(/descendant::boolean/following-sibling::node())",
-            new Double(53));
+            Double.valueOf(53));
 
         assertXPathValue(
             context,
             "count(/descendant::boolean/following-sibling::name)",
-            new Double(7));
+            Double.valueOf(7));
     }
 
+    @Test
     public void testAxisParent() {
         // parent::
-        assertXPathValue(context, "count(/beans/..)", new Double(1));
+        assertXPathValue(context, "count(/beans/..)", Double.valueOf(1));
 
-        assertXPathValue(context, "count(//..)", new Double(9));
+        assertXPathValue(context, "count(//..)", Double.valueOf(9));
 
-        assertXPathValue(context, "count(//../..)", new Double(2));
+        assertXPathValue(context, "count(//../..)", Double.valueOf(2));
 
         assertXPathValueIterator(
             context,
@@ -501,37 +527,40 @@ public abstract class BeanModelTestCase extends JXPathTestCase {
             list("Name 1", "Name 2"));
     }
 
+    @Test
     public void testAxisPreceding() {
         // preceding::
         assertXPathValue(
             context,
             "count(beans[2]/int/preceding::node())",
-            new Double(8));
+            Double.valueOf(8));
 
         assertXPathValue(
             context,
             "count(beans[2]/int/preceding::boolean)",
-            new Double(2));
+            Double.valueOf(2));
     }
 
+    @Test
     public void testAxisPrecedingSibling() {
         // preceding-sibling::
         assertXPathValue(
             context,
             "count(/boolean/preceding-sibling::node())",
-            new Double(2));
+            Double.valueOf(2));
 
         assertXPathValue(
             context,
             "count(/nestedBean/int/../preceding-sibling::node())",
-            new Double(12));
+            Double.valueOf(12));
 
         assertXPathValue(
             context,
             "count(/descendant::int/preceding-sibling::node())",
-            new Double(10));
+            Double.valueOf(10));
     }
 
+    @Test
     public void testAxisSelf() {
         // self::
         assertXPathValue(context, "self::node() = /", Boolean.TRUE);
@@ -539,6 +568,7 @@ public abstract class BeanModelTestCase extends JXPathTestCase {
         assertXPathValue(context, "self::root = /", Boolean.TRUE);
     }
 
+    @Test
     public void testUnion() {
         // Union - note corrected document order
         assertXPathValueIterator(
@@ -548,29 +578,30 @@ public abstract class BeanModelTestCase extends JXPathTestCase {
                 "String 1",
                 "String 2",
                 "String 3",
-                new Integer(1),
-                new Integer(2),
-                new Integer(3),
-                new Integer(4)));
+                Integer.valueOf(1),
+                Integer.valueOf(2),
+                Integer.valueOf(3),
+                Integer.valueOf(4)));
 
         assertXPathValue(
             context,
             "count((integers | beans[1]/strings)[contains(., '1')])",
-            new Double(2));
+            Double.valueOf(2));
 
         assertXPathValue(
             context,
             "count((integers | beans[1]/strings)[name(.) = 'strings'])",
-            new Double(3));
+            Double.valueOf(3));
 
         // Note that the following is different from "integer[2]" -
         // it is a filter expression
-        assertXPathValue(context, "(integers)[2]", new Integer(2));
+        assertXPathValue(context, "(integers)[2]", Integer.valueOf(2));
     }
 
+    @Test
     public void testAxisAttribute() {
         // Attributes are just like children to beans
-        assertXPathValue(context, "count(@*)", new Double(21.0));
+        assertXPathValue(context, "count(@*)", Double.valueOf(21.0));
 
         // Unknown attribute
         assertXPathValueLenient(context, "@foo", null);
@@ -580,8 +611,9 @@ public abstract class BeanModelTestCase extends JXPathTestCase {
      * Testing the pseudo-attribute "name" that java beans
      * objects appear to have.
      */
+    @Test
     public void testAttributeName() {
-        assertXPathValue(context, "nestedBean[@name = 'int']", new Integer(1));
+        assertXPathValue(context, "nestedBean[@name = 'int']", Integer.valueOf(1));
 
         assertXPathPointer(
             context,
@@ -589,17 +621,19 @@ public abstract class BeanModelTestCase extends JXPathTestCase {
             "/nestedBean/int");
     }
 
+    @Test
     public void testAttributeLang() {
 
         assertXPathValue(context, "@xml:lang", "en-US");
 
-        assertXPathValue(context, "count(@xml:*)", new Double(1));
+        assertXPathValue(context, "count(@xml:*)", Double.valueOf(1));
 
         assertXPathValue(context, "lang('en')", Boolean.TRUE);
 
         assertXPathValue(context, "lang('fr')", Boolean.FALSE);
     }
 
+    @Test
     public void testCoreFunctions() {
 
         assertXPathValue(context, "boolean(boolean)", Boolean.TRUE);
@@ -616,12 +650,12 @@ public abstract class BeanModelTestCase extends JXPathTestCase {
             "boolean(integers[position() > 4])",
             Boolean.FALSE);
 
-        assertXPathValue(context, "sum(integers)", new Double(10));        
+        assertXPathValue(context, "sum(integers)", Double.valueOf(10));
 
         assertXPathValueAndPointer(
                 context,
                 "integers[last()]",
-                new Integer(4),
+                Integer.valueOf(4),
                 "/integers[4]");
 
         assertXPathValueAndPointer(
@@ -631,6 +665,7 @@ public abstract class BeanModelTestCase extends JXPathTestCase {
                 "/beans[1]/strings[3]");
     }
 
+    @Test
     public void testBooleanPredicate() {
         // use child axis
 
@@ -692,18 +727,19 @@ public abstract class BeanModelTestCase extends JXPathTestCase {
         assertXPathValueIterator(
             context,
             "integers[position()<3]",
-            list(new Integer(1), new Integer(2)));
-            
+            list(Integer.valueOf(1), Integer.valueOf(2)));
+
         context.getVariables().declareVariable(
             "temp",
             context.getValue("beans"));
-        
+
         assertXPathValueIterator(
             context,
             "$temp[int < 2]/int",
-            list(new Integer(1)));
+            list(Integer.valueOf(1)));
     }
 
+    @Test
     public void testDocumentOrder() {
         assertDocumentOrder(context, "boolean", "int", -1);
 
@@ -722,47 +758,51 @@ public abstract class BeanModelTestCase extends JXPathTestCase {
         assertDocumentOrder(context, "nestedBean/int", "object/int", -1);
     }
 
+    @Test
     public void testSetPropertyValue() {
         // Simple property
-        assertXPathSetValue(context, "int", new Integer(2));
+        assertXPathSetValue(context, "int", Integer.valueOf(2));
 
         // Simple property with conversion from string
-        assertXPathSetValue(context, "int", "3", new Integer(3));
+        assertXPathSetValue(context, "int", "3", Integer.valueOf(3));
 
         // Simple property with conversion from array
-        assertXPathSetValue(context, "int", new int[] { 4 }, new Integer(4));
+        assertXPathSetValue(context, "int", new int[] { 4 }, Integer.valueOf(4));
 
         // Attribute (which is the same as a child for beans
-        assertXPathSetValue(context, "@int", new Integer(10));
+        assertXPathSetValue(context, "@int", Integer.valueOf(10));
     }
 
+    @Test
     public void testSetCollectionElement() {
         // Collection element
-        assertXPathSetValue(context, "integers[2]", new Integer(5));
+        assertXPathSetValue(context, "integers[2]", Integer.valueOf(5));
 
         // Collection element with conversion
         assertXPathSetValue(
             context,
             "integers[2]",
             new int[] { 6 },
-            new Integer(6));
+            Integer.valueOf(6));
     }
 
+    @Test
     public void testSetContextDependentNode() {
         // Find node without using SimplePathInterpreter
         assertXPathSetValue(
             context,
             "integers[position() = 1]",
-            new Integer(8));
+            Integer.valueOf(8));
 
         // Find node without using SimplePathInterpreter and set its property
         assertXPathSetValue(
             context,
             "beans[name = 'Name 1']/int",
-            new Integer(9));
+            Integer.valueOf(9));
 
     }
 
+    @Test
     public void testSetNonPrimitiveValue() {
         // First, let's see if we can set a collection element to null
         assertXPathSetValue(context, "beans[2]", null);
@@ -771,11 +811,12 @@ public abstract class BeanModelTestCase extends JXPathTestCase {
         context.setValue("beans[2]", new NestedTestBean("Name 9"));
 
         assertEquals(
-            "Modified <" + "beans[2]/name" + ">",
             "Name 9",
-            context.getValue("beans[2]/name"));
+            context.getValue("beans[2]/name"),
+            "Modified <" + "beans[2]/name" + ">");
     }
 
+    @Test
     public void testCreatePath() {
         context.setValue("nestedBean", null);
 
@@ -783,24 +824,19 @@ public abstract class BeanModelTestCase extends JXPathTestCase {
         assertXPathCreatePath(
             context,
             "/nestedBean/int",
-            new Integer(1),
+            Integer.valueOf(1),
             "/nestedBean/int");
 
-        boolean ex = false;
-        try {
+        assertThrows(Exception.class, () ->
             assertXPathCreatePath(
                 context,
                 "/nestedBean/beans[last() + 1]",
-                new Integer(1),
-                "/nestedBean/beans[last() + 1]");
-        }
-        catch (Exception e) {
-            ex = true;
-        }
-        assertTrue("Exception thrown on invalid path for creation", ex);
-        
+                Integer.valueOf(1),
+                "/nestedBean/beans[last() + 1]"),
+            "Exception thrown on invalid path for creation");
     }
 
+    @Test
     public void testCreatePathAndSetValue() {
         context.setValue("nestedBean", null);
 
@@ -808,62 +844,68 @@ public abstract class BeanModelTestCase extends JXPathTestCase {
         assertXPathCreatePathAndSetValue(
             context,
             "/nestedBean/int",
-            new Integer(2),
+            Integer.valueOf(2),
             "/nestedBean/int");
     }
 
+    @Test
     public void testCreatePathExpandNewCollection() {
         context.setValue("beans", null);
 
-        // Calls factory.createObject(..., testBean, "beans", 2), 
+        // Calls factory.createObject(..., testBean, "beans", 2),
         // then  factory.createObject(..., testBean, "beans", 2)
         assertXPathCreatePath(
             context,
             "/beans[2]/int",
-            new Integer(1),
+            Integer.valueOf(1),
             "/beans[2]/int");
     }
 
+    @Test
     public void testCreatePathAndSetValueExpandNewCollection() {
         context.setValue("beans", null);
 
-        // Calls factory.createObject(..., testBean, "beans", 2), 
+        // Calls factory.createObject(..., testBean, "beans", 2),
         // then factory.createObject(..., testBean, "beans", 2)
         assertXPathCreatePathAndSetValue(
             context,
             "/beans[2]/int",
-            new Integer(2),
+            Integer.valueOf(2),
             "/beans[2]/int");
     }
 
+    @Test
     public void testCreatePathExpandExistingCollection() {
         // Calls factory.createObject(..., TestBean, "integers", 5)
         // to expand collection
         assertXPathCreatePathAndSetValue(
             context,
             "/integers[5]",
-            new Integer(3),
+            Integer.valueOf(3),
             "/integers[5]");
     }
 
+    @Test
     public void testCreatePathExpandExistingCollectionAndSetProperty() {
         // Another, but the collection already exists
         assertXPathCreatePath(
             context,
             "/beans[3]/int",
-            new Integer(1),
+            Integer.valueOf(1),
             "/beans[3]/int");
     }
 
+    @Test
     public void testCreatePathAndSetValueExpandExistingCollection() {
         // Another, but the collection already exists
         assertXPathCreatePathAndSetValue(
             context,
             "/beans[3]/int",
-            new Integer(2),
+            Integer.valueOf(2),
             "/beans[3]/int");
     }
 
+    @Test
     public void testCreatePathCreateBeanExpandCollection() {
         context.setValue("nestedBean", null);
 
@@ -876,6 +918,7 @@ public abstract class BeanModelTestCase extends JXPathTestCase {
             "/nestedBean/strings[2]");
     }
 
+    @Test
     public void testCreatePathAndSetValueCreateBeanExpandCollection() {
         context.setValue("nestedBean", null);
 
@@ -888,24 +931,27 @@ public abstract class BeanModelTestCase extends JXPathTestCase {
             "/nestedBean/strings[2]");
     }
 
+    @Test
     public void testRemovePathPropertyValue() {
         // Remove property value
         context.removePath("nestedBean/int");
         assertEquals(
-            "Remove property value",
-            new Integer(0),
-            context.getValue("nestedBean/int"));
+            Integer.valueOf(0),
+            context.getValue("nestedBean/int"),
+            "Remove property value");
     }
 
+    @Test
     public void testRemovePathArrayElement() {
         // Assigns a new array to the property
         context.removePath("nestedBean/strings[1]");
         assertEquals(
-            "Remove array element",
             "String 2",
-            context.getValue("nestedBean/strings[1]"));
+            context.getValue("nestedBean/strings[1]"),
+            "Remove array element");
     }
 
+    @Test
     public void testRemoveAllArrayElements() {
         context.removeAll("nestedBean/strings");
         assertXPathValueIterator(
@@ -914,6 +960,7 @@ public abstract class BeanModelTestCase extends JXPathTestCase {
             list());
     }
 
+    @Test
     public void testRemoveAllListElements() {
         context.removeAll("list");
         assertXPathValueIterator(
@@ -922,6 +969,7 @@ public abstract class BeanModelTestCase extends JXPathTestCase {
             this instanceof DynaBeanModelTest ? list(null, null, null) : list());
     }
 
+    @Test
     public void testRemoveAllMapEntries() {
         context.removeAll("map/*");
         assertXPathValue(
@@ -930,51 +978,55 @@ public abstract class BeanModelTestCase extends JXPathTestCase {
             Collections.EMPTY_MAP);
     }
 
+    @Test
     public void testRemovePathBeanValue() {
         context.removePath("nestedBean");
-        assertEquals(
-            "Remove collection element",
-            null,
-            context.getValue("nestedBean"));
+        assertNull(
+            context.getValue("nestedBean"),
+            "Remove collection element");
     }
-    
+
+    @Test
     public void testRelativeContextRelativePath() {
-        JXPathContext relative =
+        final JXPathContext relative =
             context.getRelativeContext(context.getPointer("nestedBean"));
-        
-        assertXPathValueAndPointer(relative, 
-            "int", 
-            new Integer(1), 
+
+        assertXPathValueAndPointer(relative,
+            "int",
+            Integer.valueOf(1),
             "/nestedBean/int");
     }
 
+    @Test
     public void testRelativeContextAbsolutePath() {
-        JXPathContext relative =
+        final JXPathContext relative =
             context.getRelativeContext(context.getPointer("nestedBean"));
-        
-        assertXPathValueAndPointer(relative, 
-            "/integers[2]", 
-            new Integer(2), 
+
+        assertXPathValueAndPointer(relative,
+            "/integers[2]",
+            Integer.valueOf(2),
             "/integers[2]");
     }
 
+    @Test
     public void testRelativeContextParent() {
-        JXPathContext relative =
+        final JXPathContext relative =
             context.getRelativeContext(context.getPointer("nestedBean"));
-        
-        assertXPathValueAndPointer(relative, 
-            "../integers[2]", 
-            new Integer(2), 
+
+        assertXPathValueAndPointer(relative,
+            "../integers[2]",
+            Integer.valueOf(2),
             "/integers[2]");
     }
-    
+
+    @Test
     public void testRelativeContextInheritance() {
         context.setFunctions(new ClassFunctions(TestFunctions.class, "test"));
-        JXPathContext relative =
+        final JXPathContext relative =
             context.getRelativeContext(context.getPointer("nestedBean"));
-        
-        assertXPathValue(relative, 
-            "test:countPointers(strings)", 
-            new Integer(3));
+
+        assertXPathValue(relative,
+            "test:countPointers(strings)",
+            Integer.valueOf(3));
     }
 }
